# kslearn

./: .env.example  .gitignore  HIERARCHICAL_FORMAT.md  LICENSE  README.md  ksl_tool.py  pyproject.toml  setup.py
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  content_request.md  feature_request.md
data/: kslearn_brain.json  kslearn_package.json  kslearn_platform.json  kslearn_user_guide.json
data/config/tgpt/: api_keys
data/ksl/: bat_scripting.ksl  hierarchical_sample.json  hierarchical_sample.ksl  kslearn_user_guide.ksl  linux_mastery.ksl  pott_level_6_course.ksl  termux_mastery.ksl
data/txt/: Learning Guide POTT Level Six(1) PDF - Copy.txt
docs/: ADDING_CONTENT.md  AI_SUGGESTIONS.md  CHANGELOG.md  DESIGN.md  HIERARCHICAL_FORMAT.md  INSTALLATION.md  KSL_ECOSYSTEM.md  KSL_VERSE_GAME_DESIGN.md  ONLINE_MODE.md  PROTECTION.md  USER_GUIDE.md
kslearn/: __init__.py  __main__.py  cli.py  config.py  constants.py  firebase_config.py  ksl_loader.py  ksl_tool.py  loader.py  main.py  navigation.py  protector.py  ui.py  update_checker.py
kslearn/engines/: __init__.py  achievements.py  notes_viewer.py  quiz_engine.py  tutorials.py  verse_engine.py
kslearn/main/: __init__.py  ai_chat.py  datastore.py  learning_notes.py  support.py
kslearn/online/: __init__.py  firebase_rtdb.py  online_mode.py
